--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,38 @@
-html,
-body {
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,600;1,400&display=swap');
+
+
+code {
+ font-family: 'Montserrat', sans-serif;
+}
+:root {
+  --primary: #00B39E;
+  --app-max-width: 600px;
+  --dark:#00252E;
+  --white:#fff
+}
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+}
+
+body {
+ font-family: 'Montserrat', sans-serif;
+  min-height: 100vh;
+}
+
+button {
+  font-family: inherit;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: var(--primary);
+  border: none;
+  color: var(--white);
+}
+input {
+  font-size: 16px;
+  caret-color: var(--primary);
 }
 
 a {
@@ -11,16 +40,5 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+
